Fixed small styling bug on localization page where feedbackPanel was overlapping the save button

--- a/fid-web/src/main/webapp/style/legacy/pageStyles/localization.css
+++ b/fid-web/src/main/webapp/style/legacy/pageStyles/localization.css
@@ -59,8 +59,8 @@ hr {
    	position: absolute;
    	background-color: #EBF8CD;
    	padding: 10px 20px;
-   	right: 160px;
-   	top: 20px;
+   	right: 200px;
+   	top: 30px;
     font-weight: bold;
 }
 
